// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItalianMode /> should take snapshot with default mode 1`] = `
<span
  class="makeStyles-title-2"
>
  Italian Mode
</span>
`;

exports[`<ItalianMode /> should take snapshot with italian mode 1`] = `
<span
  class="makeStyles-title-1"
>
  Italian Mode
</span>
`;
